tests/correctness/resources/miniboxing/tests/compile/mb_nested_class_forth.check
newSource1.scala:7: error: The following code is accessing field c of miniboxed class CCCC, a pattern which becomes invalid after the miniboxing transformation. Please allow Scala to generate accessors for this field by adding val to the constructor parameter: "val c: T".
    val x1: T = c
                ^
newSource1.scala:10: error: The following code is accessing field c of miniboxed class CCCC, a pattern which becomes invalid after the miniboxing transformation. Please allow Scala to generate accessors for this field by adding val to the constructor parameter: "val c: T".
      val x3: T = c
                  ^